[tool.poetry]
name = "sistema-adocao-dso1"
version = "0.1.0"
description = ""
authors = ["Pamela Monteiro <pamela.csmonteiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
